# bes

./: Cargo.toml  README  demo.sqlite
migrations/2023-03-07-043913_create_setup/: down.sql  up.sql
migrations/2023-03-08-221940_add_to_messages/: down.sql  up.sql
migrations/2023-03-10-224514_add_to_date_int/: up.sql
sample_emails/: books.eml  clown.eml  clown_reply.eml  old_friend.eml  pinky-reply-reply.eml  pinky-reply.eml  pinky.eml  popcorn.eml  spam1.eml
src/: app.rs  config.rs  database.rs  init.rs  log.rs  main.rs  messages.rs  models.rs  schema.rs  sync.rs
src/components/: email.rs  email_thread.rs  mod.rs  utils.rs
