[package]
name = "bes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.3", features = [] }
dioxus-desktop = "*"
clap = { version = "*", features = ["derive"] }
time = "*"
himalaya-lib = "0.6.0"
mailparse = "*"
dirs = "*"
futures = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"
serde = "*"
serde_derive = "*"
libsqlite3-sys = "^0.25"
diesel = { version = "*", features = ["sqlite"] }
diesel_cli_ext = "0.3.6"
diesel_migrations = "*"
itertools = "*"
chrono = "*"
sha2 = "*"
dioxus-hot-reload = "0.1.1"
ammonia = "*"
css-inline = "*"
