[package]
name = "bes"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Bes"
identifier = "com.becker.bes"
icon = ["icons/Icon.icns", "icons/win-256.png", "icons/win-32.png"]
version = "0.2.0"
copyright = "Copyright (c) Benedikt Terhechte (2022). All rights reserved."
category = "Social Network"
short_description = "Archive your Twitter data into a offline desktop app"
osx_minimum_system_version = "10.12"
deb_depends = [
    "libwebkit2gtk-4.0-dev",
    "libgtk-3-dev",
    "libayatana-appindicator3-dev",
    "libsoup2.4-dev",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.3", features = [] }
dioxus-desktop = "*"
clap = { version = "*", features = ["derive"] }
time = "*"
himalaya-lib = "0.6.0"
mailparse = "*"
dirs = "*"
futures = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"
serde = "*"
serde_derive = "*"
libsqlite3-sys = "^0.25"
diesel = { version = "*", features = ["sqlite"] }
diesel_cli_ext = "0.3.6"
diesel_migrations = "*"
itertools = "*"
chrono = "*"
sha2 = "*"
dioxus-hot-reload = "0.1.1"
ammonia = "*"
css-inline = "*"
image = "*"                                       # generate icon
dioxus-daisyui = "*"
